# Context-Engineering-TWELVE-team-work

./: .gitignore  README.md  Skillcorner Advanced Metrics Analyst.ipynb  pyproject.toml  requirements.txt  settings.py
.github/: copilot-instructions.md
.ipynb_checkpoints/: Skillcorner Advanced Metrics Analyst-checkpoint.ipynb
.streamlit/: secrets_example.toml
Build-up analyst pre processing/: Skillcorner Advanced Metrics Analyst.ipynb  desc_stats_create.py  preprocess.py  team_id_name_map.csv
classes/: chat.py  data_point.py  data_source.py  description.py  embeddings.py  visual.py
context_engineering_course/: heimskringla.txt  predict_tokens.py  test_embeddings.py  test_responses.py
data/: style.css
data/describe/: team_buildup_old_version_with_style.xlsx  team_buildup_style.xlsx
data/embeddings/: Forward.parquet  Forward_bigfive.parquet  Interpretation.parquet  Personality.parquet  WVS_qualities.parquet
data/gpt_examples/: team_buildup.xlsx  team_buildup_style.xlsx
data/team_build_up_analyst/: buildup_metrics.csv  preprocess.py  team_buildup_metrics.csv
data/team_build_up_style_analyst/: desc_stats.csv
pages/: embedder.py  football_scout.py  personality_test.py  team_build_up_analyst.py  team_build_up_analyst_oldversion.py  team_build_up_style_analyst.py  wvs_chat.py
utils/: embeddings_utils.py  page_components.py
