[project]
name = "twelve-gpt-educational"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customerio==2.1",
    "fastapi==0.104.1",
    "google-generativeai==0.7.2",
    "matplotlib>=3.10.8",
    "numpy==1.26.3",
    "openai[embeddings]==2.15.0",
    "openpyxl>=3.1.5",
    "pandas==2.2.0",
    "plotly>=6.6.0",
    "python-jose==3.3.0",
    "requests==2.29.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "streamlit==1.31.0",
    "tiktoken>=0.12.0",
    "uvicorn==0.24.0.post1",
]
